# fearNgreed

./: .gitignore  AGENTS.md  README.md  copy-audit.config.json  index.html  package-lock.json  package.json  pyproject.toml
assets/: app.js  chart-navigation.js  control-api.js  history-chart-state.js  signal-engine.js  strategy-engine.js  styles.css
automation/: com.sonchanggi.fearngreed.live-signal.plist  com.sonchanggi.fearngreed.official-refresh.plist
contracts/: fear-parity-matrix.v1.json
data/: automation-status.json  dashboard.json  history.json  live-signal.json  strategy-comparison.json  summary.json
docs/: chart-map.md  data-contract.md  methodology.md  parity-audit.md  strategy-spec.md
schemas/: live-signal.schema.json  summary.schema.json
scripts/: fear_parity_reference.py  install-live-signal-launch-agent  install-official-refresh-launch-agent  run-live-signal  run-official-refresh  run-with-timeout  verify-parity.mjs
tests/: test_analysis.py  test_contracts.py  test_control_run.py  test_controlled_analysis_workflow.py  test_events_backtest.py  test_live_signal.py  test_local_automation.py  test_local_official_automation.py  test_model.py  test_operations.py  test_parity_contract.py  test_pipeline_outputs.py  test_providers.py  test_quality.py  test_refresh.py  test_site.py  test_timeout_runner.py  (+1 more)
tests-js/: app-dom.test.mjs  chart-navigation.test.mjs  chart-wiring.test.mjs  contracts.test.mjs  control-api.test.mjs  frontend.test.mjs  history-chart-state.test.mjs  parity-gate.test.mjs  signal-engine.test.mjs  strategy-engine.test.mjs
(+26 files in other folders)
